applications/pymp/pymp_frontend/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pymp-frontend
    pymp.image: pymp-frontend
  name: pymp-frontend
  namespace: pymp
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: pymp-frontend
  strategy:
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 50%
  template:
    metadata:
      labels:
        app: pymp-frontend
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
      containers:
      - name: pymp-frontend
        image: ghcr.io/tomp736/pymp/pymp_frontend:latest
        imagePullPolicy: Always
