applications/pymp/pymp_frontend/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pymp-frontend
  namespace: pymp
  labels:
    app: pymp-frontend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: pymp-frontend
